# ReGraphv2

./: .gitignore  requirements.txt
DataProcess/: REFACTORING_README.md  cli.py  dataset_builder.py  dataset_builder_new.py  dataset_features.py  dataset_utils.py  dataset_wash.py  file_processor.py  hf_dataset_player.py  parallel_processor.py  pd_writer.py  processing_result.py  test.ipynb
GraphBuilder/: cfg_graph_builder.py  ddg_graph_builder.py  graph_generator.py
GraphBuilder/cfg_exporter/: CMakeLists.txt  MyCFGPrinter.cpp
GraphBuilder/ddg_exporter/: CMakeLists.txt  DDGInstPrinter.cpp  DDGPrinter.cpp  DDGPrinter_value_flow.cpp
GraphBuilder/meta_remover/: CMakeLists.txt  StripAllMetadata.cpp
Model/: model_backbone.py
Pretrain/: ir_dataset.py  pretrain_dataset.py  pretrain_model.py  run_pretrain.py  split_train_validation.py
Scripts/: README.md  ida2llvm.py  pipeline.py  random_test.py  split_llvm_ir.sh  task1_lift.py  task2_reoptimize.py  task3_extract.py  utils.py
Tokenizer/: bpe_tokenizer.py  corpus_builder.py  ir_tokenizer.py  normalizer.py  simple_pipeline.py
Tokenizer/output_tokenizer/: llvm_ir_bpe_config.json  llvm_ir_bpe_vocab.json
Tokenizer/small_sample_tokenizer/: llvm_ir_bpe.json  llvm_ir_bpe_config.json  llvm_ir_bpe_vocab.json
Utils/: utils.py
